--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,13 +1,40 @@
 {
   "language": "English",
-  "navi": {
-    "login": "login",
-    "notFind": "404",
-    "admin": "admin",
-    "zujian": "zujian",
-    "zujianchuancan": "zujianchuancan",
-    "article": "article",
-    "articleList": "article list",
-    "articleListAdd": "article add"
+  "sidebar": {
+    "admin": "Home",
+    "articleManage": "Manage",
+    "articleList": "Llist",
+    "articleListAdd": "Add",
+    "articleType": "Type",
+    "articleTypeAdd": "Add",
+    "productManage": "Manage",
+    "productList": "List",
+    "productListAdd": "Add",
+    "productType": "Type",
+    "productTypeAdd": "Add",
+    "orderManage": "Manage",
+    "orderList": "List",
+    "orderRefund": "Refund",
+    "orderComment": "Comment",
+    "userManage": "Manage",
+    "userList": "List",
+    "userListAdd": "Add",
+    "userGrade": "Grade",
+    "userGradeAdd": "Add",
+    "data": "Statistics",
+    "system": "System",
+    "profile": "Profile",
+    "password": "Password"
+  },
+  "menubar": {
+    "logout": "Sign out"
+  },
+  "login": {
+    "userName": "User Name",
+    "password":  "Password",
+    "sinIn": "Sing In",
+    "userNamePlaceholder": "please enter your username",
+    "passwordPlaceholder": "please enter your password",
+    "loginError": "Login failed, try again later"
   }
 }
